--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,45 +1,94 @@
 {
   "name": "frontend",
-  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
+    "start-hmr": "ng serve --hmr",
+    "build": "ng build --prod",
+    "test": "ng test --progress=false --code-coverage",
+    "test-ci": "npm run test -- --watch=false",
+    "ts-lint": "ng lint",
+    "compress": "node scripts/compress.js",
+    "lint": "concurrently -r \"npm run ts-lint -- --fix\" \"npm run stylelint\"",
+    "lint-ci": "concurrently -r \"npm run ts-lint\" \"npm run stylelint\"",
+    "stylelint": "stylelint --syntax scss \"src/**/*.scss\"",
+    "commit-check": "npm run test && ng lint --fix && npm run stylelint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
-    "rxjs": "~6.6.0",
+    "@angular/animations": "11.2.11",
+    "@angular/cdk": "^12.0.4",
+    "@angular/common": "11.2.11",
+    "@angular/compiler": "11.2.11",
+    "@angular/core": "11.2.11",
+    "@angular/forms": "11.2.11",
+    "@angular/localize": "^11.2.11",
+    "@angular/platform-browser": "11.2.11",
+    "@angular/platform-browser-dynamic": "11.2.11",
+    "@angular/router": "11.2.11",
+    "@fortawesome/angular-fontawesome": "^0.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@swimlane/ngx-datatable": "^20.0.0",
+    "bootstrap": "^4.1.1",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.5.4",
+    "export-to-csv": "0.2.1",
+    "font-awesome": "^4.7.0",
+    "jwt-decode": "2.2.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "ngx-form-error": "^1.1.3",
+    "ngx-toastr": "^12.1.0",
+    "rxjs": "6.6.7",
+    "svgxuse": "^1.2.1",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "url-template": "^2.0.8",
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
+    "@angular-devkit/build-angular": "~0.1102.10",
+    "@angular/cli": "11.2.10",
+    "@angular/compiler-cli": "11.2.11",
+    "@angular/language-service": "11.2.11",
     "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jwt-decode": "^1.4.28",
+    "@types/lodash": "^4.14.68",
     "@types/node": "^12.11.1",
+    "@types/protractor-helpers": "^1.0.33",
+    "@types/url-template": "^2.0.27",
+    "argv": "0.0.2",
     "codelyzer": "^6.0.0",
+    "concurrently": "4.1.0",
     "jasmine-core": "~3.6.0",
+    "jasmine-reporters": "^2.4.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-edge-launcher": "^0.4.2",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "license-checker": "^25.0.1",
+    "mkdirp": "^0.5.1",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "protractor-helpers": "git+https://github.com/mmmichl/protractor-helpers",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
+    "puppeteer": "^10.2.0",
+    "rxjs-tslint": "^0.1.7",
+    "sass": "^1.32.4",
+    "stylelint": "^9.2.0",
+    "stylelint-order": "^0.8.1",
+    "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "typescript": "4.1.5"
   }
 }
