--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /backend/target/
 /node/
 /frontend/bin/
-/node/
 /frontend/node/
 /.idea/
+**/babel-webpack
+**/angular-webpack
 
 
 .idea/**/workspace.xml
