first attemp to angular 14

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/frontend/target/frontend-0.1-SNAPSHOT.jar
+/frontend/target/maven-archiver/pom.properties
