--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "@angular/cdk": "^12.0.4",
     "@angular/common": "13.3.11",
     "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
+    "@angular/core": "^14.0.5",
     "@angular/forms": "13.3.11",
     "@angular/localize": "^13.3.11",
     "@angular/platform-browser": "13.3.11",
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "13.3.0",
+    "@angular/cli": "^14.0.5",
     "@angular/compiler-cli": "13.3.11",
     "@angular/language-service": "13.3.11",
     "@types/jasmine": "~3.6.0",
