--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /backend/target/
 /node/
 /frontend/bin/
-/node/
 /frontend/node/
 /.idea/
+**/babel-webpack
+**/angular-webpack
 
 
 .idea/**/workspace.xml
@@ -73,3 +74,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/frontend/target/frontend-0.1-SNAPSHOT.jar
+/frontend/target/maven-archiver/pom.properties
