--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "start": "ng serve",
     "start-hmr": "ng serve --hmr",
     "build": "ng build --prod",
+    "test": "ng test --progress=false --code-coverage",
     "test-ci": "npm run test -- --watch=false",
     "ts-lint": "ng lint",
     "compress": "node scripts/compress.js",
@@ -68,6 +69,7 @@
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.0.0",
