--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@swimlane/ngx-datatable": "^20.0.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-icons": "^1.9.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "export-to-csv": "0.2.1",
