--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-/frontend/target/frontend-0.1-SNAPSHOT.jar
-/frontend/target/maven-archiver/pom.properties
+/frontend/target/*
+/target/unit-tests/reports/Chrome_104.0.5112.102_(Windows_10)/unit-test-webchannel.xml
+/target/unit-tests/reports/Chrome_105.0.0.0_(Windows_10)/unit-test-webchannel.xml
