--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,80 +17,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.11",
-    "@angular/cdk": "^12.0.4",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "13.3.11",
-    "@angular/localize": "^13.3.11",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
-    "@fortawesome/angular-fontawesome": "^0.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "@swimlane/ngx-datatable": "^20.0.0",
-    "bootstrap": "^4.1.1",
-    "bootstrap-icons": "^1.9.1",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
-    "export-to-csv": "0.2.1",
+    "@angular/animations": "^16.2.2",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@popperjs/core": "^2.11.6",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "@types/lodash": "^4.14.197",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
-    "jwt-decode": "2.2.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "ngx-form-error": "^1.1.3",
-    "ngx-toastr": "^12.1.0",
-    "rxjs": "6.6.7",
-    "svgxuse": "^1.2.1",
-    "tslib": "^2.0.0",
-    "url-template": "^2.0.8",
-    "zone.js": "~0.11.1"
+    "keycloak-angular": "^14.1.0",
+    "keycloak-js": "^22.0.1",
+    "ngx-toastr": "^17.0.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "^13.3.8",
-    "@angular/compiler-cli": "13.3.11",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
     "@angular/language-service": "13.3.11",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jwt-decode": "^1.4.28",
-    "@types/lodash": "^4.14.68",
-    "@types/node": "^12.11.1",
-    "@types/protractor-helpers": "^1.0.33",
-    "@types/url-template": "^2.0.27",
-    "argv": "0.0.2",
-    "codelyzer": "^6.0.0",
-    "concurrently": "4.1.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-reporters": "^2.4.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-edge-launcher": "^0.4.2",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "license-checker": "^25.0.1",
-    "mkdirp": "^0.5.1",
-    "protractor": "~7.0.0",
-    "protractor-helpers": "git+https://github.com/mmmichl/protractor-helpers",
-    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
-    "puppeteer": "^10.2.0",
-    "rxjs-tslint": "^0.1.7",
-    "sass": "^1.32.4",
-    "stylelint": "^9.2.0",
-    "stylelint-order": "^0.8.1",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "4.6.4"
+    "@angular/localize": "^16.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
   }
 }
