--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -61,14 +61,14 @@
           </execution>
 
           <!-- clean install -->
-          <execution>
+   <!--       <execution>
             <id>npm install</id>
             <goals>
               <goal>npm</goal>
             </goals>
           </execution>
 
-          <!-- code validation -->
+          &lt;!&ndash; code validation &ndash;&gt;
           <execution>
             <id>npm run lint</id>
             <goals>
@@ -79,17 +79,17 @@
               <arguments>run lint</arguments>
             </configuration>
           </execution>
-
+-->
           <!-- build app -->
-          <execution>
+         <!-- <execution>
             <id>npm run build</id>
             <goals>
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>run build --prod</arguments>
+              <arguments>run build &#45;&#45;prod</arguments>
             </configuration>
-          </execution>
+          </execution>-->
 
         </executions>
       </plugin>
