upgarde to Spring boot 3.1

--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bende</groupId>
-    <artifactId>java-angular-example</artifactId>
+    <artifactId>angular16-keycloak-spring</artifactId>
     <packaging>pom</packaging>
     <version>0.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
-        <version>2.5.7</version>
+        <version>3.1.3</version>
         <artifactId>spring-boot-starter-parent</artifactId>
     </parent>
 
@@ -21,37 +21,28 @@
     </modules>
 
     <properties>
-        <!-- swagger / openapi -->
-        <openapi-generator.version>5.4.0</openapi-generator.version>
-        <geronimo-openapi.version>1.0.15</geronimo-openapi.version>
-        <swagger.version>1.5.21</swagger.version>
-        <swagger-annotations.version>2.1.11</swagger-annotations.version>
-        <swagger-codegen.version>3.0.30</swagger-codegen.version>
         <jackson.version>2.13.0</jackson.version>
         <gson.version>2.8.2</gson.version>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>5.3.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.4.3</version>
+            <version>3.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -61,7 +52,6 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.12.3</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
