--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.bende</groupId>
-        <artifactId>java-angular-example</artifactId>
+        <artifactId>angular16-keycloak-spring</artifactId>
         <version>0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -17,8 +17,8 @@
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 
         <!-- testing -->
-        <mockito.version>3.5.13</mockito.version>
-        <assertj.version>3.15.0</assertj.version>
+     <!--   <mockito.version>3.5.13</mockito.version>
+        <assertj.version>3.15.0</assertj.version>-->
         <awaitility.version>4.1.1</awaitility.version>
         <springframework.version>5.3.17</springframework.version>
     </properties>
@@ -79,13 +79,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
+            <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito.version}</version>
+            <version>5.4.0</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -94,12 +94,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
@@ -118,7 +113,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.1.3</version>
                 <configuration>
                     <mainClass>com.bende.Application</mainClass>
                 </configuration>
@@ -127,40 +122,6 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>${openapi-generator.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>
-                                ${project.parent.basedir}/openAPI.yaml
-                            </inputSpec>
-                            <generatorName>spring</generatorName>
-                            <library>spring-boot</library>
-                            <apiPackage>com.bende.api</apiPackage>
-                            <modelPackage>com.bende.api.model</modelPackage>
-                            <supportingFilesToGenerate>
-                                ApiUtil.java
-                            </supportingFilesToGenerate>
-                            <configOptions>
-                                <interfaceOnly>true</interfaceOnly>
-                                <sourceFolder>src/gen/java</sourceFolder>
-                                <modelPackage>com.bende.api.model</modelPackage>
-                                <apiPackage>com.bende.api</apiPackage>
-                            </configOptions>
-                            <typeMappings>
-                                <typeMapping>OffsetDateTime=java.time.LocalDateTime</typeMapping>
-                            </typeMappings>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
