--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,33 +17,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.2",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@angular/animations": "^17.1.1",
+    "@angular/common": "^17.1.1",
+    "@angular/compiler": "^17.1.1",
+    "@angular/core": "^17.1.1",
+    "@angular/forms": "^17.1.1",
+    "@angular/platform-browser": "^17.1.1",
+    "@angular/platform-browser-dynamic": "^17.1.1",
+    "@angular/router": "^17.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@types/lodash": "^4.14.197",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
-    "keycloak-angular": "^14.1.0",
+    "keycloak-angular": "^15.0.0",
+    "keycloak-js": "^22.0.5",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.2.0",
-    "@angular/language-service": "13.3.11",
-    "@angular/localize": "^16.2.0",
+    "@angular-devkit/build-angular": "^17.1.1",
+    "@angular/cli": "~17.1.1",
+    "@angular/compiler-cli": "^17.1.1",
+    "@angular/language-service": "17.1.1",
+    "@angular/localize": "^17.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -51,6 +52,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.2.0"
   }
 }
