--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,14 @@
     </modules>
 
     <properties>
-        <jackson.version>2.13.0</jackson.version>
+        <!-- swagger / openapi -->
+        <openapi-generator.version>5.4.0</openapi-generator.version>
+        <geronimo-openapi.version>1.0.15</geronimo-openapi.version>
+        <swagger.version>1.5.21</swagger.version>
+        <swagger-annotations.version>2.1.11</swagger-annotations.version>
+        <swagger-codegen.version>3.0.30</swagger-codegen.version>
         <gson.version>2.8.2</gson.version>
+        <jackson.version>2.13.0</jackson.version>
         <java.version>17</java.version>
     </properties>
 
