--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "stylelint": "stylelint --syntax scss \"src/**/*.scss\"",
     "commit-check": "npm run test && ng lint --fix && npm run stylelint",
     "e2e": "ng e2e",
-    "generate-types": "openapi-typescript openAPI.yaml --output src/types/api.ts"
+    "generate-api": "openapi-generator-cli generate -i ../openAPI.yaml -g typescript-angular -o src/app/openapi-generated-sources  -p=removeOperationIdPrefix=true"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^17.1.1",
     "@angular/router": "^17.1.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@openapitools/openapi-generator-cli": "^2.9.0",
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@types/lodash": "^4.14.197",
