--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.h2.console.settings.web-allow-others=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql = true
+
+# keycloak
+keycloak.realm=Login
+keycloak.auth-server-url=http://localhost:8080
+keycloak.bearer-only=true
+keycloak.resource=backend
