proxy configuration; start-dev/prod mocking API service in production and dev environment

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -67,17 +67,24 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "development": {
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "frontend:build"
+            "buildTarget": "frontend:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
-            "production": {
+            "prod": {
               "buildTarget": "frontend:build:production"
+            },
+            "dev": {
+              "buildTarget": "frontend:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           }
         },
