--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "stylelint": "stylelint --syntax scss \"src/**/*.scss\"",
     "commit-check": "npm run test && ng lint --fix && npm run stylelint",
     "e2e": "ng e2e",
-    "generate-api": "openapi-generator-cli generate -i ../openAPI.yaml -g typescript-angular -o src/app/openapi-generated-sources  -p=removeOperationIdPrefix=true"
+    "generate-api": "openapi-generator-cli generate -i ../openAPI.yaml -g typescript-angular -o src/app/openapi-generated-sources  -p=removeOperationIdPrefix=true",
+    "mock-server": "json-server --watch mockdata.json --port 3000",
+    "start-dev": "ng serve --configuration=dev --proxy-config proxy.conf.json",
+    "start-prod": "ng serve --configuration prod"
   },
   "private": true,
   "dependencies": {
