--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "font-awesome": "^4.7.0",
     "keycloak-angular": "^15.0.0",
     "keycloak-js": "^22.0.5",
+    "lodash": "^4.17.21",
+    "ngx-logger": "^5.0.12",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
