--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -55,6 +55,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
+              "aot": true,
               "budgets": [
                 {
                   "type": "initial",
