cypress install and configuration

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,7 +34,7 @@
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
-            "buildOptimizer": true,
+            "buildOptimizer": false,
             "aot": true,
             "sourceMap": true,
             "optimization": false,
@@ -54,7 +54,7 @@
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
+              "buildOptimizer": false,
               "aot": true,
               "budgets": [
                 {
