--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "@angular/language-service": "17.1.1",
     "@angular/localize": "^17.1.1",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^13.6.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
