--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "@angular/compiler-cli": "^17.1.1",
     "@angular/language-service": "17.1.1",
     "@angular/localize": "^17.1.1",
+    "@types/cypress": "^1.1.3",
     "@types/jasmine": "~4.3.0",
     "cypress": "^13.6.4",
     "jasmine-core": "~4.6.0",
