--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "@types/jasmine": "~4.3.0",
     "cypress": "^13.6.4",
     "jasmine-core": "~4.6.0",
+    "js-sha256": "^0.11.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
