--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@types/cypress": "^1.1.3",
     "@types/jasmine": "~4.3.0",
     "cypress": "^13.6.4",
+    "cypress-keycloak-commands": "^1.2.0",
     "jasmine-core": "~4.6.0",
     "js-sha256": "^0.11.0",
     "karma": "~6.4.0",
