- adding signal based error service - Just playing around angularTudastar updated

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,4 @@ keycloak.realm=Login
 keycloak.auth-server-url=http://localhost:8080
 keycloak.bearer-only=true
 keycloak.resource=backend
+keycloak.credentials.secret=bEOYbPvOAjfAX8PByavlIhhNK5EiwIBo
