--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "strictPropertyInitialization":true,
+    "strictNullChecks": true,
     "lib": [
       "ES2022",
       "dom"
