- frontend müködik, de backendbe nem tud behivni - backend müködik

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start-hmr": "ng serve --hmr",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test --progress=false --code-coverage",
     "test-ci": "npm run test -- --watch=false",
     "ts-lint": "ng lint",
