--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "frontend": {
+    "bende-angular-frontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -16,7 +16,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/frontend",
+            "outputPath": "dist/bende-angular-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -76,15 +76,15 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "frontend:build",
+            "buildTarget": "bende-angular-frontend:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "prod": {
-              "buildTarget": "frontend:build:production"
+              "buildTarget": "bende-angular-frontend:build:production"
             },
             "dev": {
-              "buildTarget": "frontend:build:development",
+              "buildTarget": "bende-angular-frontend:build:development",
               "proxyConfig": "proxy.conf.json"
             }
           }
@@ -92,7 +92,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "frontend:build"
+            "buildTarget": "bende-angular-frontend:build"
           }
         },
         "test": {
@@ -129,11 +129,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "frontend:serve"
+            "devServerTarget": "bende-angular-frontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "frontend:serve:production"
+              "devServerTarget": "bende-angular-frontend:serve:production"
             }
           }
         }
